adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <p>Olá, Mundo!</p>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque inventore debitis rem, maiores doloribus dolore perferendis sapiente molestiae vel et cupiditate delectus praesentium mollitia eius sequi quia. Natus, at eius.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, quibusdam quae. Fuga tempora sed quasi cum voluptatibus quidem placeat quae in neque amet. Quos, iure? Magni corrupti id mollitia voluptate!</p>
 </body>
 </html>
